# Store_Sales_Time_Series

./: Makefile  README.md  main_notebook.ipynb  pyproject.toml
models/: xgb_model.pkl
notebooks/: project.ipynb
src/: load_data.py  main.py  train.py  wrangle.py
