[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "time_series"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "raghad" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["time_series"]
include = ["pyproject.toml", "time_series/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["time_series"]
force-sort-within-sections = true

